<resources>
    <string name="app_name">背包问题</string>
    <string name="author_name">
        陈鸿超\n吴丰屹\n曹佳伟\n
    </string>
    <string name="school_name">
        吉林大学软件学院2017级
    </string>
    <string name="startuse">开始使用</string>
    <string name="finish">退出程序</string>
    <string name="backageIcondescribe">背包图标</string>
    <string name="selectMenu">请选择所需要的功能</string>
    <string name="sampleName">简单背包问题</string>
    <string name="zerooneName">0-1背包问题</string>
    <string name="commonName">一般背包问题</string>
    <string name="dim2Name">二维背包问题</string>
    <string name="inputdata">请输入数据</string>
    <string name="maxweight">最大质量M</string>
    <string name="itemnumber">物品数量N</string>
    <string name="maxp">最大体积P</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="inputMaxWeight">请输入最大质量...</string>
    <string name="inputItemNumber">请输入物品数量...</string>
    <string name="addItemWeight">填写质量</string>
    <string name="showItemWeight">查看质量</string>
    <string name="addItemPrice">填写效益</string>
    <string name="showItemPrice">查看效益</string>
    <string name="inputWeight">请输入物品质量...</string>
    <string name="inputMaxp">请输入最大体积...</string>
</resources>
